--- a/a-propos.html
+++ b/a-propos.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>À propos | Porokhane Digital Consulting</title>
+  <title>AGENCE DE STRATÉGIE DIGITALE DAKAR | Porokhane Digital Consulting</title>
 
 
   <!-- Google Tag Manager -->
@@ -17,9 +17,38 @@
 </script>
 
 <!-- End Google Tag Manager -->
-  <meta name="description" content="Découvrez la vision, l'équipe et les valeurs de Porokhane Digital Consulting, agence digitale innovante au Sénégal.">
+  <meta name="description" content="AGENCE DE STRATÉGIE DIGITALE DAKAR — Vision, équipe et valeurs. Accompagnement en stratégie marketing digital au Sénégal.">
   <link rel="icon" type="image/png" href="logo.png">
   <link rel="canonical" href="https://digital-porokhane.com/a-propos.html">
+  <!-- Open Graph -->
+  <meta property="og:title" content="AGENCE DE STRATÉGIE DIGITALE DAKAR | Porokhane Digital Consulting">
+  <meta property="og:description" content="AGENCE DE STRATÉGIE DIGITALE DAKAR — Vision, équipe et valeurs. Accompagnement en stratégie marketing digital au Sénégal.">
+  <meta property="og:image" content="https://digital-porokhane.com/logo.png">
+  <meta property="og:url" content="https://digital-porokhane.com/a-propos.html">
+  <meta property="og:type" content="website">
+  <!-- Twitter Cards -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="AGENCE DE STRATÉGIE DIGITALE DAKAR | Porokhane Digital Consulting">
+  <meta name="twitter:description" content="AGENCE DE STRATÉGIE DIGITALE DAKAR — Vision, équipe et valeurs. Accompagnement en stratégie marketing digital au Sénégal.">
+  <meta name="twitter:image" content="https://digital-porokhane.com/logo.png">
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "LocalBusiness",
+    "name": "Porokhane Digital Consulting",
+    "url": "https://digital-porokhane.com/",
+    "logo": "https://digital-porokhane.com/logo.png",
+    "image": "https://digital-porokhane.com/logo.png",
+    "address": {
+      "@type": "PostalAddress",
+      "addressLocality": "Dakar",
+      "addressCountry": "SN"
+    },
+    "sameAs": [
+      "https://www.linkedin.com/company/porokhane-digital-consulting/"
+    ]
+  }
+  </script>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   
@@ -1553,7 +1582,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <!-- Hero Banner -->
   <section class="hero-banner">
     <div class="container">
-      <h1>Vers l'excellence digitale en Afrique</h1>
+      <h1>AGENCE DE STRATÉGIE DIGITALE DAKAR – Vers l'excellence digitale en Afrique</h1>
       <p>Porokhane Digital Consulting propulse les organisations sénégalaises et africaines par l'innovation. Découvrez notre vision, nos valeurs et notre équipe.</p>
     </div>
   </section>
