--- a/accompagnement.html
+++ b/accompagnement.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Accompagnement | Porokhane Digital Consulting</title>
+  <title>STRATÉGIE MARKETING DIGITAL DAKAR | Porokhane Digital Consulting</title>
   <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
@@ -13,9 +13,38 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','GTM-MT6DMTW8');</script>
 <!-- End Google Tag Manager -->
-  <meta name="description" content="Services d'accompagnement : Automatisation, Bases de données et Intelligence Artificielle pour votre transformation digitale.">
+  <meta name="description" content="STRATÉGIE MARKETING DIGITAL DAKAR — Conseils et accompagnement: stratégie marketing web, communication digitale et optimisation de la performance.">
   <link rel="icon" type="image/png" href="logo.png">
   <link rel="canonical" href="https://digital-porokhane.com/accompagnement.html">
+  <!-- Open Graph -->
+  <meta property="og:title" content="STRATÉGIE MARKETING DIGITAL DAKAR | Porokhane Digital Consulting">
+  <meta property="og:description" content="STRATÉGIE MARKETING DIGITAL DAKAR — Conseils et accompagnement: stratégie marketing web, communication digitale et optimisation de la performance.">
+  <meta property="og:image" content="https://digital-porokhane.com/logo.png">
+  <meta property="og:url" content="https://digital-porokhane.com/accompagnement.html">
+  <meta property="og:type" content="website">
+  <!-- Twitter Cards -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="STRATÉGIE MARKETING DIGITAL DAKAR | Porokhane Digital Consulting">
+  <meta name="twitter:description" content="STRATÉGIE MARKETING DIGITAL DAKAR — Conseils et accompagnement: stratégie marketing web, communication digitale et optimisation de la performance.">
+  <meta name="twitter:image" content="https://digital-porokhane.com/logo.png">
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "LocalBusiness",
+    "name": "Porokhane Digital Consulting",
+    "url": "https://digital-porokhane.com/",
+    "logo": "https://digital-porokhane.com/logo.png",
+    "image": "https://digital-porokhane.com/logo.png",
+    "address": {
+      "@type": "PostalAddress",
+      "addressLocality": "Dakar",
+      "addressCountry": "SN"
+    },
+    "sameAs": [
+      "https://www.linkedin.com/company/porokhane-digital-consulting/"
+    ]
+  }
+  </script>
 
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
@@ -1111,7 +1140,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <!-- Hero Banner -->
   <section class="hero-banner">
     <div class="container">
-      <h1>Accompagnement Digital</h1>
+      <h1>STRATÉGIE MARKETING DIGITAL DAKAR – Accompagnement Digital</h1>
       <p>Transformez votre entreprise avec nos solutions d'automatisation, bases de données et intelligence artificielle sur mesure.</p>
     </div>
   </section>
