--- a/audit_express.html
+++ b/audit_express.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Audit Express Digital - Porokhane Digital Consulting</title>
-  <meta name="description" content="Obtenez un diagnostic rapide et précis de votre présence digitale. Audit SEO, réseaux sociaux, UX, sécurité, visibilité en ligne.">
+  <title>AGENCE DIGITALE SEO DAKAR | Porokhane Digital Consulting</title>
+  <meta name="description" content="AGENCE DIGITALE SEO DAKAR — Audit express: SEO, réseaux sociaux, UX et sécurité. Diagnostic rapide et actionnable à Dakar.">
   <link rel="icon" type="image/png" href="logo.png">
   <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
@@ -15,6 +15,35 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 })(window,document,'script','dataLayer','GTM-MT6DMTW8');</script>
 <!-- End Google Tag Manager -->
   <link rel="canonical" href="https://digital-porokhane.com/audit_express.html">
+  <!-- Open Graph -->
+  <meta property="og:title" content="AGENCE DIGITALE SEO DAKAR | Porokhane Digital Consulting">
+  <meta property="og:description" content="AGENCE DIGITALE SEO DAKAR — Audit express: SEO, réseaux sociaux, UX et sécurité. Diagnostic rapide et actionnable à Dakar.">
+  <meta property="og:image" content="https://digital-porokhane.com/logo.png">
+  <meta property="og:url" content="https://digital-porokhane.com/audit_express.html">
+  <meta property="og:type" content="website">
+  <!-- Twitter Cards -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="AGENCE DIGITALE SEO DAKAR | Porokhane Digital Consulting">
+  <meta name="twitter:description" content="AGENCE DIGITALE SEO DAKAR — Audit express: SEO, réseaux sociaux, UX et sécurité. Diagnostic rapide et actionnable à Dakar.">
+  <meta name="twitter:image" content="https://digital-porokhane.com/logo.png">
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "LocalBusiness",
+    "name": "Porokhane Digital Consulting",
+    "url": "https://digital-porokhane.com/",
+    "logo": "https://digital-porokhane.com/logo.png",
+    "image": "https://digital-porokhane.com/logo.png",
+    "address": {
+      "@type": "PostalAddress",
+      "addressLocality": "Dakar",
+      "addressCountry": "SN"
+    },
+    "sameAs": [
+      "https://www.linkedin.com/company/porokhane-digital-consulting/"
+    ]
+  }
+  </script>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <style>
@@ -604,7 +633,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <div class="menu-overlay" id="menuOverlay"></div>
 
   <main class="audit-main">
-    <H1 class="audit-title">Audit Express Digital</H1>
+    <H1 class="audit-title">AGENCE DIGITALE SEO DAKAR – Audit Express Digital</H1>
     
     <div class="audit-intro">Pourquoi un audit digital express ? Parce qu’un bon pilotage digital commence par un diagnostic clair. Notre méthode exclusive vous offre un état des lieux rapide, stratégique et actionnable de votre présence en ligne.</div>
     <div class="audit-section-title">Notre méthode : rigueur, outils avancés & efficacité</div>
