--- a/automatisation.html
+++ b/automatisation.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Automatisation des Processus - Porokhane Digital Consulting</title>
-  <meta name="description" content="Automatisation sur mesure de vos tâches et processus métiers. Diagnostic, développement, déploiement, accompagnement.">
+  <title>AGENCE DE TRANSFORMATION DIGITALE DAKAR | Porokhane Digital Consulting</title>
+  <meta name="description" content="AGENCE DE TRANSFORMATION DIGITALE DAKAR — Automatisation, IA et optimisation des processus pour accélérer votre performance à Dakar.">
   <link rel="icon" type="image/png" href="logo.png">
   <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
@@ -15,6 +15,35 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 })(window,document,'script','dataLayer','GTM-MT6DMTW8');</script>
 <!-- End Google Tag Manager -->
   <link rel="canonical" href="https://digital-porokhane.com/automatisation.html">
+  <!-- Open Graph -->
+  <meta property="og:title" content="AGENCE DE TRANSFORMATION DIGITALE DAKAR | Porokhane Digital Consulting">
+  <meta property="og:description" content="AGENCE DE TRANSFORMATION DIGITALE DAKAR — Automatisation, IA et optimisation des processus pour accélérer votre performance à Dakar.">
+  <meta property="og:image" content="https://digital-porokhane.com/logo.png">
+  <meta property="og:url" content="https://digital-porokhane.com/automatisation.html">
+  <meta property="og:type" content="website">
+  <!-- Twitter Cards -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="AGENCE DE TRANSFORMATION DIGITALE DAKAR | Porokhane Digital Consulting">
+  <meta name="twitter:description" content="AGENCE DE TRANSFORMATION DIGITALE DAKAR — Automatisation, IA et optimisation des processus pour accélérer votre performance à Dakar.">
+  <meta name="twitter:image" content="https://digital-porokhane.com/logo.png">
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "LocalBusiness",
+    "name": "Porokhane Digital Consulting",
+    "url": "https://digital-porokhane.com/",
+    "logo": "https://digital-porokhane.com/logo.png",
+    "image": "https://digital-porokhane.com/logo.png",
+    "address": {
+      "@type": "PostalAddress",
+      "addressLocality": "Dakar",
+      "addressCountry": "SN"
+    },
+    "sameAs": [
+      "https://www.linkedin.com/company/porokhane-digital-consulting/"
+    ]
+  }
+  </script>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <style>
@@ -565,7 +594,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <div class="menu-overlay" id="menuOverlay"></div>
 
   <main class="service-main">
-    <H1 class="service-title">Automatisation des Processus</H1>
+    <H1 class="service-title">AGENCE DE TRANSFORMATION DIGITALE DAKAR – Automatisation des Processus</H1>
     
     <div class="service-intro">Pourquoi automatiser vos tâches ?<br>Pour gagner en efficacité, réduire les erreurs et libérer du temps pour ce qui compte vraiment. Nous créons des solutions d’automatisation sur mesure, fiables et simples à utiliser.</div>
     <div class="service-section-title"> Notre méthode : écoute, ingénierie & impact immédiat</div>
