--- a/base_donnee.html
+++ b/base_donnee.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Gestion de Bases de Données - Porokhane Digital Consulting</title>
-  <meta name="description" content="Conception, déploiement et optimisation de bases de données sur mesure. Sécurité, performance, accompagnement pédagogique.">
+  <title>BASE DE DONNÉES DAKAR | Porokhane Digital Consulting</title>
+  <meta name="description" content="BASE DE DONNÉES DAKAR — Conception, déploiement et optimisation de bases de données performantes et sécurisées. Administration, migration et formation.">
   <link rel="icon" type="image/png" href="logo.png">
   <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
@@ -15,8 +15,35 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 })(window,document,'script','dataLayer','GTM-MT6DMTW8');</script>
 <!-- End Google Tag Manager -->
   <link rel="canonical" href="https://digital-porokhane.com/base_donnee.html">
+  <meta property="og:title" content="BASE DE DONNÉES DAKAR | Porokhane Digital Consulting">
+  <meta property="og:description" content="Conception, déploiement et optimisation de bases de données performantes et sécurisées à Dakar. Administration, migration, sauvegardes et formation.">
+  <meta property="og:image" content="https://digital-porokhane.com/logo.png">
+  <meta property="og:url" content="https://digital-porokhane.com/base_donnee.html">
+  <meta property="og:type" content="website">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="BASE DE DONNÉES DAKAR | Porokhane Digital Consulting">
+  <meta name="twitter:description" content="Conception, déploiement et optimisation de bases de données performantes et sécurisées à Dakar. Administration, migration, sauvegardes et formation.">
+  <meta name="twitter:image" content="https://digital-porokhane.com/logo.png">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "LocalBusiness",
+    "name": "Porokhane Digital Consulting",
+    "url": "https://digital-porokhane.com/",
+    "logo": "https://digital-porokhane.com/logo.png",
+    "image": "https://digital-porokhane.com/logo.png",
+    "address": {
+      "@type": "PostalAddress",
+      "addressLocality": "Dakar",
+      "addressCountry": "SN"
+    },
+    "sameAs": [
+      "https://www.linkedin.com/company/porokhane-digital-consulting/"
+    ]
+  }
+  </script>
   <style>
     /* CSS complet du menu, pied de page, chatbot, responsive, etc. (copié depuis strategie_digitale.html) */
     :root { --vert: #1fa47a; --vert-clair: #d1fae5; --bleu: #2563eb; --bleu-clair: #dbeafe; --blanc: #fff; --gris-bg: #f6f8fa; --gris-texte: #64748b; --gris-titre: #1e293b; --ombre: 0 4px 24px rgba(0,0,0,0.08); --rayon: 18px; --rayon-grand: 28px; }
@@ -446,7 +473,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     </div>
   </nav>
   <main class="service-main">
-    <H1 class="service-title">Gestion de Bases de Données</H1>
+    <H1 class="service-title">BASE DE DONNÉES DAKAR — Gestion et Administration</H1>
     
     <div class="service-intro">Pourquoi une base de données sur mesure ?<br>Parce qu’une bonne gestion de l’information commence par une structuration fiable, performante et évolutive. Nous concevons et administrons des bases de données qui s’adaptent à votre activité et à vos objectifs.</div>
     <div class="service-section-title"> Notre approche : précision, performance & sécurité</div>
