--- a/blog.html
+++ b/blog.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Blog | Porokhane Digital Consulting</title>
+  <title>BLOG MARKETING DIGITAL DAKAR | Porokhane Digital Consulting</title>
+  <meta name="description" content="BLOG MARKETING DIGITAL DAKAR — Articles et conseils en stratégie digitale, SEO, automatisation et cybersécurité par Porokhane Digital Consulting.">
   <link rel="icon" type="image/png" href="logo.png">
   <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
@@ -14,8 +15,35 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 })(window,document,'script','dataLayer','GTM-MT6DMTW8');</script>
 <!-- End Google Tag Manager -->
   <link rel="canonical" href="https://digital-porokhane.com/blog.html">
+  <meta property="og:title" content="BLOG MARKETING DIGITAL DAKAR | Porokhane Digital Consulting">
+  <meta property="og:description" content="Conseils et analyses à Dakar sur le marketing digital, SEO, automatisation et cybersécurité.">
+  <meta property="og:image" content="https://digital-porokhane.com/logo.png">
+  <meta property="og:url" content="https://digital-porokhane.com/blog.html">
+  <meta property="og:type" content="website">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="BLOG MARKETING DIGITAL DAKAR | Porokhane Digital Consulting">
+  <meta name="twitter:description" content="Conseils et analyses à Dakar sur le marketing digital, SEO, automatisation et cybersécurité.">
+  <meta name="twitter:image" content="https://digital-porokhane.com/logo.png">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "LocalBusiness",
+    "name": "Porokhane Digital Consulting",
+    "url": "https://digital-porokhane.com/",
+    "logo": "https://digital-porokhane.com/logo.png",
+    "image": "https://digital-porokhane.com/logo.png",
+    "address": {
+      "@type": "PostalAddress",
+      "addressLocality": "Dakar",
+      "addressCountry": "SN"
+    },
+    "sameAs": [
+      "https://www.linkedin.com/company/porokhane-digital-consulting/"
+    ]
+  }
+  </script>
   <style>
     :root {
       --vert: #1fa47a;
@@ -725,7 +753,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <!-- Hero Banner -->
   <section class="blog-hero">
     <div class="container">
-      <h1>Le blog des curieux du numérique</h1>
+      <h1>BLOG MARKETING DIGITAL DAKAR</h1>
       <p>Découvrez nos derniers articles et conseils pour réussir votre transformation digitale.</p>
     </div>
   </section>
