--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Contact - Porokhane Digital Consulting</title>
+  <title>CONTACT — AGENCE DE COMMUNICATION DIGITALE DAKAR | Porokhane Digital Consulting</title>
+  <meta name="description" content="CONTACT — AGENCE DE COMMUNICATION DIGITALE DAKAR. Parlez-nous de votre projet en stratégie digitale, SEO, automatisation, formation et cybersécurité.">
   <link rel="icon" type="image/png" href="logo.png">
   <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
@@ -14,9 +15,36 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 })(window,document,'script','dataLayer','GTM-MT6DMTW8');</script>
 <!-- End Google Tag Manager -->
   <link rel="canonical" href="https://digital-porokhane.com/contact.html">
+  <meta property="og:title" content="CONTACT — AGENCE DE COMMUNICATION DIGITALE DAKAR | Porokhane Digital Consulting">
+  <meta property="og:description" content="Parlez-nous de votre projet à Dakar : SEO, marketing digital, automatisation, formation et cybersécurité.">
+  <meta property="og:image" content="https://digital-porokhane.com/logo.png">
+  <meta property="og:url" content="https://digital-porokhane.com/contact.html">
+  <meta property="og:type" content="website">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="CONTACT — AGENCE DE COMMUNICATION DIGITALE DAKAR | Porokhane Digital Consulting">
+  <meta name="twitter:description" content="Parlez-nous de votre projet à Dakar : SEO, marketing digital, automatisation, formation et cybersécurité.">
+  <meta name="twitter:image" content="https://digital-porokhane.com/logo.png">
   
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "LocalBusiness",
+    "name": "Porokhane Digital Consulting",
+    "url": "https://digital-porokhane.com/",
+    "logo": "https://digital-porokhane.com/logo.png",
+    "image": "https://digital-porokhane.com/logo.png",
+    "address": {
+      "@type": "PostalAddress",
+      "addressLocality": "Dakar",
+      "addressCountry": "SN"
+    },
+    "sameAs": [
+      "https://www.linkedin.com/company/porokhane-digital-consulting/"
+    ]
+  }
+  </script>
   <style>
     :root {
       --vert: #1fa47a;
@@ -1200,7 +1228,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <section id="contact" class="contact-section">
     <div class="container">
       <div class="section-header">
-        <h1>Contactez Notre Équipe</h1>
+        <h1>CONTACT — AGENCE DE COMMUNICATION DIGITALE DAKAR</h1>
         <p>Prêt à transformer votre entreprise ? Parlons de votre projet</p>
       </div>
       
