--- a/cybersecurite.html
+++ b/cybersecurite.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Formation Cybersécurité - Porokhane Digital Consulting</title>
-  <meta name="description" content="Formation complète en cybersécurité : protection des systèmes, réseaux, outils de sécurité. Apprenez à sécuriser vos données et prévenir les cyber menaces.">
+  <title>FORMATION CYBERSÉCURITÉ DAKAR | Porokhane Digital Consulting</title>
+  <meta name="description" content="FORMATION CYBERSÉCURITÉ DAKAR — Protection des systèmes et réseaux, outils de sécurité, bonnes pratiques. Sécurisez vos données et prévenez les cybermenaces.">
   <link rel="icon" type="image/png" href="logo.png">
   <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
@@ -15,10 +15,36 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 })(window,document,'script','dataLayer','GTM-MT6DMTW8');</script>
 <!-- End Google Tag Manager -->
 
-<link rel="canonical" href="https://digital-porokhane.com/cybersecurite.html">
   <link rel="canonical" href="https://digital-porokhane.com/cybersecurite.html">
+  <meta property="og:title" content="FORMATION CYBERSÉCURITÉ DAKAR | Porokhane Digital Consulting">
+  <meta property="og:description" content="Cybersécurité à Dakar: protection des systèmes et réseaux, outils de sécurité, bonnes pratiques pour sécuriser vos données.">
+  <meta property="og:image" content="https://digital-porokhane.com/logo.png">
+  <meta property="og:url" content="https://digital-porokhane.com/cybersecurite.html">
+  <meta property="og:type" content="website">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="FORMATION CYBERSÉCURITÉ DAKAR | Porokhane Digital Consulting">
+  <meta name="twitter:description" content="Cybersécurité à Dakar: protection des systèmes et réseaux, outils de sécurité et prévention des cybermenaces.">
+  <meta name="twitter:image" content="https://digital-porokhane.com/logo.png">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "LocalBusiness",
+    "name": "Porokhane Digital Consulting",
+    "url": "https://digital-porokhane.com/",
+    "logo": "https://digital-porokhane.com/logo.png",
+    "image": "https://digital-porokhane.com/logo.png",
+    "address": {
+      "@type": "PostalAddress",
+      "addressLocality": "Dakar",
+      "addressCountry": "SN"
+    },
+    "sameAs": [
+      "https://www.linkedin.com/company/porokhane-digital-consulting/"
+    ]
+  }
+  </script>
   <style>
     :root { --vert: #1fa47a; --vert-clair: #d1fae5; --bleu: #2563eb; --bleu-clair: #dbeafe; --blanc: #fff; --gris-bg: #f6f8fa; --gris-texte: #64748b; --gris-titre: #1e293b; --ombre: 0 4px 24px rgba(0,0,0,0.08); --rayon: 18px; --rayon-grand: 28px; }
     * { box-sizing: border-box; margin: 0; padding: 0; }
@@ -532,7 +558,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     </div>
   </nav>
   <main class="service-main">
-    <H1  class="service-title">Formation Cybersécurité - Protection des Systèmes & Réseaux</H1>
+    <H1  class="service-title">FORMATION CYBERSÉCURITÉ DAKAR — Protection des Systèmes & Réseaux</H1>
     
     <div class="service-intro">Vous souhaitez comprendre les menaces numériques, sécuriser vos données ou débuter une carrière dans la cybersécurité ? Ce parcours vous apporte les compétences essentielles.</div>
     <div class="service-section-title">Objectifs de la formation</div>
