--- a/ia.html
+++ b/ia.html
@@ -4,8 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Intelligence Artificielle (IA) - Porokhane Digital Consulting</title>
-  <meta name="description" content="Intégration de l'intelligence artificielle sur mesure. Diagnostic, modélisation, déploiement, accompagnement IA pour votre entreprise.">
+  <title>AGENCE DE COMMUNICATION DIGITALE DAKAR - Solutions Intelligence Artificielle | Porokhane Digital Consulting</title>
+  <meta name="description" content="AGENCE DE COMMUNICATION DIGITALE DAKAR : Solutions Intelligence Artificielle sur mesure à Dakar. Diagnostic, modélisation, déploiement et accompagnement IA.">
+  <meta name="keywords" content="AGENCE DE COMMUNICATION DIGITALE DAKAR, intelligence artificielle Dakar, IA sur mesure, machine learning Dakar, solutions IA Sénégal, développement IA Dakar, agence digitale Dakar">
   <link rel="icon" type="image/png" href="logo.png">
   <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
@@ -15,6 +16,51 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 })(window,document,'script','dataLayer','GTM-MT6DMTW8');</script>
 <!-- End Google Tag Manager -->
   <link rel="canonical" href="https://digital-porokhane.com/ia.html">
+  
+  <!-- Open Graph Meta Tags -->
+  <meta property="og:title" content="AGENCE DE COMMUNICATION DIGITALE DAKAR - Solutions Intelligence Artificielle | Porokhane Digital Consulting">
+  <meta property="og:description" content="AGENCE DE COMMUNICATION DIGITALE DAKAR : Solutions Intelligence Artificielle sur mesure à Dakar. Diagnostic, modélisation, déploiement et accompagnement IA.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://digital-porokhane.com/ia.html">
+  <meta property="og:image" content="https://digital-porokhane.com/logo_porokhane_digital.jpg">
+  <meta property="og:site_name" content="Porokhane Digital Consulting">
+  <meta property="og:locale" content="fr_FR">
+  
+  <!-- Twitter Card Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="AGENCE DE COMMUNICATION DIGITALE DAKAR - Solutions Intelligence Artificielle | Porokhane Digital Consulting">
+  <meta name="twitter:description" content="AGENCE DE COMMUNICATION DIGITALE DAKAR : Solutions Intelligence Artificielle sur mesure à Dakar. Diagnostic, modélisation, déploiement et accompagnement IA.">
+  <meta name="twitter:image" content="https://digital-porokhane.com/logo_porokhane_digital.jpg">
+  
+  <!-- JSON-LD Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "LocalBusiness",
+    "name": "Porokhane Digital Consulting",
+    "description": "AGENCE DE COMMUNICATION DIGITALE DAKAR : Solutions Intelligence Artificielle sur mesure à Dakar.",
+    "url": "https://digital-porokhane.com",
+    "telephone": "+221710589088",
+    "email": "contact@digital-porokhane.com",
+    "address": {
+      "@type": "PostalAddress",
+      "streetAddress": "Ngor Extension villa 454",
+      "addressLocality": "Dakar",
+      "addressCountry": "SN"
+    },
+    "geo": {
+      "@type": "GeoCoordinates",
+      "latitude": "14.7167",
+      "longitude": "-17.4677"
+    },
+    "openingHours": "Mo-Fr 08:00-18:00",
+    "sameAs": [
+      "https://www.facebook.com/Porokhane.Digital.Consulting",
+      "https://www.linkedin.com/company/porokhane-digital-consulting",
+      "https://www.instagram.com/porokhane_digital_consulting/"
+    ]
+  }
+  </script>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <style>
@@ -422,7 +468,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     </div>
   </nav>
   <main class="service-main">
-    <h1 class="service-title">Intelligence Artificielle (IA)</h1>
+    <h1 class="service-title">AGENCE DE COMMUNICATION DIGITALE DAKAR - Solutions Intelligence Artificielle</h1>
     <div class="service-intro">Pourquoi intégrer l’intelligence artificielle ?<br>Pour anticiper, recommander et décider plus intelligemment. Nous concevons des modèles IA qui transforment vos données en leviers d’action.</div>
     <div class="service-section-title">Notre approche : science des données, éthique & résultats concrets</div>
     <ol class="service-steps">
