--- a/marketing.html
+++ b/marketing.html
@@ -4,8 +4,53 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Marketing Digital | Porokhane Digital Consulting</title>
-  <meta name="description" content="Services de marketing digital : Audit Express, Création de sites, Stratégie digitale, SEO et Réseaux sociaux.">
+  <title>Marketing Digital - AGENCE DE COMMUNICATION DIGITALE DAKAR | Porokhane Digital</title>
+  <meta name="description" content="Services de marketing digital à Dakar : Audit Express, Création de sites web, Stratégie digitale, SEO et Réseaux sociaux. AGENCE DE COMMUNICATION DIGITALE DAKAR spécialisée en solutions digitales innovantes au Sénégal.">
+  <meta name="keywords" content="AGENCE DE COMMUNICATION DIGITALE DAKAR, marketing digital Dakar, audit express Sénégal, création sites web Dakar, stratégie digitale, SEO Dakar, réseaux sociaux, agence digitale Sénégal">
+  <link rel="canonical" href="https://digital-porokhane.com/marketing.html">
+  
+  <!-- Open Graph Meta Tags -->
+  <meta property="og:title" content="Marketing Digital - AGENCE DE COMMUNICATION DIGITALE DAKAR | Porokhane Digital">
+  <meta property="og:description" content="Services de marketing digital à Dakar : Audit Express, Création de sites web, Stratégie digitale, SEO et Réseaux sociaux. AGENCE DE COMMUNICATION DIGITALE DAKAR spécialisée en solutions digitales innovantes au Sénégal.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://digital-porokhane.com/marketing.html">
+  <meta property="og:image" content="https://digital-porokhane.com/logo_porokhane_digital.jpg">
+  <meta property="og:site_name" content="Porokhane Digital Consulting">
+  <meta property="og:locale" content="fr_SN">
+  
+  <!-- Twitter Card Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Marketing Digital - AGENCE DE COMMUNICATION DIGITALE DAKAR | Porokhane Digital">
+  <meta name="twitter:description" content="Services de marketing digital à Dakar : Audit Express, Création de sites web, Stratégie digitale, SEO et Réseaux sociaux. AGENCE DE COMMUNICATION DIGITALE DAKAR spécialisée en solutions digitales innovantes au Sénégal.">
+  <meta name="twitter:image" content="https://digital-porokhane.com/logo_porokhane_digital.jpg">
+  
+  <!-- JSON-LD Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "LocalBusiness",
+    "name": "Porokhane Digital Consulting",
+    "description": "AGENCE DE COMMUNICATION DIGITALE DAKAR - Services de marketing digital, création de sites web, stratégie digitale, SEO et réseaux sociaux au Sénégal",
+    "url": "https://digital-porokhane.com",
+    "telephone": "+221 77 XXX XX XX",
+    "address": {
+      "@type": "PostalAddress",
+      "streetAddress": "Dakar",
+      "addressLocality": "Dakar",
+      "addressCountry": "SN"
+    },
+    "geo": {
+      "@type": "GeoCoordinates",
+      "latitude": 14.6928,
+      "longitude": -17.4467
+    },
+    "openingHours": "Mo-Fr 08:00-18:00",
+    "sameAs": [
+      "https://www.facebook.com/porokhanedigital",
+      "https://www.linkedin.com/company/porokhane-digital"
+    ]
+  }
+  </script>
   <link rel="icon" type="image/png" href="logo.png">
   <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
@@ -996,8 +1041,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <!-- Hero Banner -->
   <section class="hero-banner">
     <div class="container">
-      <h1>Marketing Digital</h1>
-      <p>Boostez votre présence en ligne avec nos services de marketing digital sur mesure. De l'audit à la stratégie complète.</p>
+      <h1>Marketing Digital - AGENCE DE COMMUNICATION DIGITALE DAKAR</h1>
+      <p>Transformez votre présence digitale</p>
     </div>
   </section>
 
