--- a/mdd.html
+++ b/mdd.html
@@ -4,7 +4,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Projet SEO & Réseaux Sociaux | Porokhane Digital</title>
+  <title>Projet SEO & Réseaux Sociaux - AGENCE DE COMMUNICATION DIGITALE DAKAR | Porokhane Digital</title>
+  <meta name="description" content="Découvrez notre projet d'optimisation SEO et de gestion des réseaux sociaux à Dakar pour améliorer la visibilité en ligne. AGENCE DE COMMUNICATION DIGITALE DAKAR spécialisée en stratégies digitales innovantes au Sénégal.">
+  <meta name="keywords" content="AGENCE DE COMMUNICATION DIGITALE DAKAR, SEO Dakar, réseaux sociaux Sénégal, optimisation SEO, gestion réseaux sociaux, visibilité en ligne Dakar, stratégie digitale Sénégal, agence digitale Dakar">
   <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
@@ -12,8 +14,50 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','GTM-MT6DMTW8');</script>
 <!-- End Google Tag Manager -->
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="canonical" href="https://digital-porokhane.com/mdd.html">
+  
+  <!-- Open Graph Meta Tags -->
+  <meta property="og:title" content="Projet SEO & Réseaux Sociaux - AGENCE DE COMMUNICATION DIGITALE DAKAR | Porokhane Digital">
+  <meta property="og:description" content="Découvrez notre projet d'optimisation SEO et de gestion des réseaux sociaux à Dakar pour améliorer la visibilité en ligne. AGENCE DE COMMUNICATION DIGITALE DAKAR spécialisée en stratégies digitales innovantes au Sénégal.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://digital-porokhane.com/mdd.html">
+  <meta property="og:image" content="https://digital-porokhane.com/logo_porokhane_digital.jpg">
+  <meta property="og:site_name" content="Porokhane Digital Consulting">
+  <meta property="og:locale" content="fr_SN">
+  
+  <!-- Twitter Card Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Projet SEO & Réseaux Sociaux - AGENCE DE COMMUNICATION DIGITALE DAKAR | Porokhane Digital">
+  <meta name="twitter:description" content="Découvrez notre projet d'optimisation SEO et de gestion des réseaux sociaux à Dakar pour améliorer la visibilité en ligne. AGENCE DE COMMUNICATION DIGITALE DAKAR spécialisée en stratégies digitales innovantes au Sénégal.">
+  <meta name="twitter:image" content="https://digital-porokhane.com/logo_porokhane_digital.jpg">
+  
+  <!-- JSON-LD Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "LocalBusiness",
+    "name": "Porokhane Digital Consulting",
+    "description": "AGENCE DE COMMUNICATION DIGITALE DAKAR - Projet SEO et gestion des réseaux sociaux pour améliorer la visibilité en ligne au Sénégal",
+    "url": "https://digital-porokhane.com",
+    "telephone": "+221 77 XXX XX XX",
+    "address": {
+      "@type": "PostalAddress",
+      "streetAddress": "Dakar",
+      "addressLocality": "Dakar",
+      "addressCountry": "SN"
+    },
+    "geo": {
+      "@type": "GeoCoordinates",
+      "latitude": 14.6928,
+      "longitude": -17.4467
+    },
+    "openingHours": "Mo-Fr 08:00-18:00",
+    "sameAs": [
+      "https://www.facebook.com/porokhanedigital",
+      "https://www.linkedin.com/company/porokhane-digital"
+    ]
+  }
+  </script>
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link rel="icon" type="image/png" href="logo.png">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Playfair+Display:wght@500;600;700&display=swap" rel="stylesheet" />
@@ -810,12 +854,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <div class="container">
       
       <div class="footer-content">
-        <div class="footer-section">
-           <div class="nav-logo">
-        <a href="index.html">
-          <img src="icone.png" alt="Porokhane Digital Consulting  Logo">
-        </a>
-      </div>
+        <h1 class="text-4xl md:text-5xl font-bold text-white mb-6 leading-tight">
+            Projet SEO & Réseaux Sociaux - AGENCE DE COMMUNICATION DIGITALE DAKAR
+        </h1>
+        <div class="nav-logo">
+          <a href="index.html">
+            <img src="icone.png" alt="Porokhane Digital Consulting  Logo">
+          </a>
+        </div>
           <p>Votre partenaire de confiance pour la transformation digitale. Nous créons des solutions innovantes qui propulsent votre entreprise vers le succès.</p>
           <div class="social-links">
             <a href="https://www.facebook.com/Porokhane.Digital.Consulting" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
