--- a/securite.html
+++ b/securite.html
@@ -4,10 +4,25 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sécurité IT - Porokhane Digital Consulting</title>
-  <link rel="icon" type="image/png" href="logo.png">
-
-  <link rel="canonical" href="https://digital-porokhane.com/securite.html">
+  <title>Sécurité Informatique - AGENCE DE COMMUNICATION DIGITALE DAKAR | Porokhane Digital Consulting</title>
+  <meta name="description" content="Services de sécurité informatique et cybersécurité à Dakar. Agence de communication digitale spécialisée en protection des données, audit sécurité et solutions cybersécurité au Sénégal.">
+  <meta name="keywords" content="sécurité informatique Dakar, cybersécurité Sénégal, agence communication digitale, protection données Dakar, audit sécurité Sénégal, solutions cybersécurité Dakar">
+  
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://porokhanedigital.com/securite.html">
+  <meta property="og:title" content="Sécurité Informatique - AGENCE DE COMMUNICATION DIGITALE DAKAR">
+  <meta property="og:description" content="Services de sécurité informatique et cybersécurité à Dakar. Agence de communication digitale spécialisée en protection des données, audit sécurité et solutions cybersécurité au Sénégal.">
+  <meta property="og:image" content="https://porokhanedigital.com/logo_porokhane_digital.jpg">
+  <meta property="og:locale" content="fr_SN">
+  <meta property="og:site_name" content="Porokhane Digital Consulting">
+  
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://porokhanedigital.com/securite.html">
+  <meta property="twitter:title" content="Sécurité Informatique - AGENCE DE COMMUNICATION DIGITALE DAKAR">
+  <meta property="twitter:description" content="Services de sécurité informatique et cybersécurité à Dakar. Agence de communication digitale spécialisée en protection des données, audit sécurité et solutions cybersécurité au Sénégal.">
+  <meta property="twitter:image" content="https://porokhanedigital.com/logo_porokhane_digital.jpg">
   <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
@@ -16,7 +31,44 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 })(window,document,'script','dataLayer','GTM-MT6DMTW8');</script>
 <!-- End Google Tag Manager -->
 
-  <meta name="description" content="Sécurisation complète de votre site WordPress. Audit, protection, surveillance et support continu pour une sécurité optimale.">
+  <link rel="icon" type="image/png" href="logo.png">
+
+  <link rel="canonical" href="https://porokhanedigital.com/securite.html">
+  
+  <!-- JSON-LD Structured Data -->
+  <script type="application/ld+json">
+  {
+      "@context": "https://schema.org",
+      "@type": "LocalBusiness",
+      "name": "Porokhane Digital Consulting",
+      "description": "Agence de communication digitale à Dakar spécialisée en sécurité informatique, cybersécurité, développement web et marketing digital",
+      "url": "https://porokhanedigital.com",
+      "telephone": "+221 77 XXX XX XX",
+      "address": {
+          "@type": "PostalAddress",
+          "streetAddress": "Dakar",
+          "addressLocality": "Dakar",
+          "addressCountry": "SN"
+      },
+      "geo": {
+          "@type": "GeoCoordinates",
+          "latitude": 14.6928,
+          "longitude": -17.4467
+      },
+      "openingHours": "Mo-Fr 08:00-18:00",
+      "sameAs": [
+          "https://www.facebook.com/porokhanedigital",
+          "https://www.linkedin.com/company/porokhane-digital",
+          "https://www.instagram.com/porokhanedigital"
+      ],
+      "serviceArea": {
+          "@type": "Place",
+          "name": "Dakar, Sénégal"
+      },
+      "priceRange": "$$",
+      "image": "https://porokhanedigital.com/logo_porokhane_digital.jpg"
+  }
+  </script>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <style>
@@ -400,7 +452,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     </div>
   </nav>
   <main class="service-main">
-    <h1 class="service-title"> Service de Sécurité IT</h1>
+    <h1 class="service-title">Sécurité Informatique - AGENCE DE COMMUNICATION DIGITALE DAKAR</h1>
     <div class="service-intro">Pourquoi sécuriser votre site WordPress ?<br>Parce qu'un site web vulnérable peut entraîner des pertes financières, une perte de crédibilité et une exposition aux cyberattaques. Notre service de sécurité assure la protection, la stabilité et la conformité de votre site face aux menaces actuelles.</div>
     <div class="service-section-title">Notre approche : prévention, surveillance & restauration rapide</div>
     <ol class="service-steps">
