--- a/service.html
+++ b/service.html
@@ -4,7 +4,25 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Nos Services - Porokhane Digital Consulting</title>
+  <title>Nos Services - AGENCE DE COMMUNICATION DIGITALE DAKAR | Porokhane Digital Consulting</title>
+  <meta name="description" content="Services de communication digitale complets à Dakar. Agence spécialisée en développement web, SEO, marketing digital, formations et solutions digitales au Sénégal.">
+  <meta name="keywords" content="services digitaux Dakar, agence communication digitale, développement web Sénégal, SEO Dakar, marketing digital Sénégal, formations digitales Dakar">
+  
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://porokhanedigital.com/service.html">
+  <meta property="og:title" content="Nos Services - AGENCE DE COMMUNICATION DIGITALE DAKAR">
+  <meta property="og:description" content="Services de communication digitale complets à Dakar. Agence spécialisée en développement web, SEO, marketing digital, formations et solutions digitales au Sénégal.">
+  <meta property="og:image" content="https://porokhanedigital.com/logo_porokhane_digital.jpg">
+  <meta property="og:locale" content="fr_SN">
+  <meta property="og:site_name" content="Porokhane Digital Consulting">
+  
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://porokhanedigital.com/service.html">
+  <meta property="twitter:title" content="Nos Services - AGENCE DE COMMUNICATION DIGITALE DAKAR">
+  <meta property="twitter:description" content="Services de communication digitale complets à Dakar. Agence spécialisée en développement web, SEO, marketing digital, formations et solutions digitales au Sénégal.">
+  <meta property="twitter:image" content="https://porokhanedigital.com/logo_porokhane_digital.jpg">
   <link rel="icon" type="image/png" href="logo.png">
   <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
@@ -13,8 +31,42 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','GTM-MT6DMTW8');</script>
 <!-- End Google Tag Manager -->
-  <link rel="canonical" href="https://digital-porokhane.com/service.html">
-  <meta name="description" content="Découvrez tous nos services digitaux : formations, marketing, accompagnement, ERP, développement web et sécurité IT.">
+  <link rel="canonical" href="https://porokhanedigital.com/service.html">
+  
+  <!-- JSON-LD Structured Data -->
+  <script type="application/ld+json">
+  {
+      "@context": "https://schema.org",
+      "@type": "LocalBusiness",
+      "name": "Porokhane Digital Consulting",
+      "description": "Agence de communication digitale à Dakar spécialisée en développement web, SEO, marketing digital, formations et solutions digitales",
+      "url": "https://porokhanedigital.com",
+      "telephone": "+221 77 XXX XX XX",
+      "address": {
+          "@type": "PostalAddress",
+          "streetAddress": "Dakar",
+          "addressLocality": "Dakar",
+          "addressCountry": "SN"
+      },
+      "geo": {
+          "@type": "GeoCoordinates",
+          "latitude": 14.6928,
+          "longitude": -17.4467
+      },
+      "openingHours": "Mo-Fr 08:00-18:00",
+      "sameAs": [
+          "https://www.facebook.com/porokhanedigital",
+          "https://www.linkedin.com/company/porokhane-digital",
+          "https://www.instagram.com/porokhanedigital"
+      ],
+      "serviceArea": {
+          "@type": "Place",
+          "name": "Dakar, Sénégal"
+      },
+      "priceRange": "$$",
+      "image": "https://porokhanedigital.com/logo_porokhane_digital.jpg"
+  }
+  </script>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <style>
@@ -854,7 +906,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <section class="services-section">
     <div class="container">
       <div class="section-header">
-        <h1>Nos Services</h1>
+        <h1>Nos Services - AGENCE DE COMMUNICATION DIGITALE DAKAR</h1>
         <p>Des solutions digitales complètes et personnalisées pour propulser votre entreprise</p>
     </div>
       <div class="services-grid">
