--- a/site.html
+++ b/site.html
@@ -4,8 +4,25 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Création & Refonte de Sites Web - Porokhane Digital Consulting</title>
-  <meta name="description" content="Création et refonte de sites web modernes, performants et adaptés à vos objectifs métiers. Design stratégique, UX moderne et technologies fiables.">
+  <title>Création & Refonte de Sites Web - AGENCE DE COMMUNICATION DIGITALE DAKAR | Porokhane Digital Consulting</title>
+  <meta name="description" content="Création et refonte de sites web modernes à Dakar. Agence de communication digitale spécialisée en développement web, design UX/UI et solutions digitales performantes au Sénégal.">
+  <meta name="keywords" content="création site web Dakar, développement web Sénégal, agence communication digitale, refonte site web Dakar, design UX UI Sénégal, solutions web Dakar">
+  
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://porokhanedigital.com/site.html">
+  <meta property="og:title" content="Création & Refonte de Sites Web - AGENCE DE COMMUNICATION DIGITALE DAKAR">
+  <meta property="og:description" content="Création et refonte de sites web modernes à Dakar. Agence de communication digitale spécialisée en développement web, design UX/UI et solutions digitales performantes au Sénégal.">
+  <meta property="og:image" content="https://porokhanedigital.com/logo_porokhane_digital.jpg">
+  <meta property="og:locale" content="fr_SN">
+  <meta property="og:site_name" content="Porokhane Digital Consulting">
+  
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://porokhanedigital.com/site.html">
+  <meta property="twitter:title" content="Création & Refonte de Sites Web - AGENCE DE COMMUNICATION DIGITALE DAKAR">
+  <meta property="twitter:description" content="Création et refonte de sites web modernes à Dakar. Agence de communication digitale spécialisée en développement web, design UX/UI et solutions digitales performantes au Sénégal.">
+  <meta property="twitter:image" content="https://porokhanedigital.com/logo_porokhane_digital.jpg">
   <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
@@ -14,7 +31,43 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 })(window,document,'script','dataLayer','GTM-MT6DMTW8');</script>
 <!-- End Google Tag Manager -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
-  <link rel="canonical" href="https://digital-porokhane.com/site.html">
+  <link rel="icon" type="image/png" href="logo.png">
+  <link rel="canonical" href="https://porokhanedigital.com/site.html">
+  
+  <!-- JSON-LD Structured Data -->
+  <script type="application/ld+json">
+  {
+      "@context": "https://schema.org",
+      "@type": "LocalBusiness",
+      "name": "Porokhane Digital Consulting",
+      "description": "Agence de communication digitale à Dakar spécialisée en création de sites web, développement web, design UX/UI et solutions digitales",
+      "url": "https://porokhanedigital.com",
+      "telephone": "+221 77 XXX XX XX",
+      "address": {
+          "@type": "PostalAddress",
+          "streetAddress": "Dakar",
+          "addressLocality": "Dakar",
+          "addressCountry": "SN"
+      },
+      "geo": {
+          "@type": "GeoCoordinates",
+          "latitude": 14.6928,
+          "longitude": -17.4467
+      },
+      "openingHours": "Mo-Fr 08:00-18:00",
+      "sameAs": [
+          "https://www.facebook.com/porokhanedigital",
+          "https://www.linkedin.com/company/porokhane-digital",
+          "https://www.instagram.com/porokhanedigital"
+      ],
+      "serviceArea": {
+          "@type": "Place",
+          "name": "Dakar, Sénégal"
+      },
+      "priceRange": "$$",
+      "image": "https://porokhanedigital.com/logo_porokhane_digital.jpg"
+  }
+  </script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <style>
     :root { --vert: #1fa47a; --vert-clair: #d1fae5; --bleu: #2563eb; --bleu-clair: #dbeafe; --blanc: #fff; --gris-bg: #f6f8fa; --gris-texte: #64748b; --gris-titre: #1e293b; --ombre: 0 4px 24px rgba(0,0,0,0.08); --rayon: 18px; --rayon-grand: 28px; }
@@ -420,7 +473,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     </div>
   </nav>
   <main class="service-main">
-    <h1 class="service-title">Création & Refonte de Sites Web</h1>
+    <h1 class="service-title">Création & Refonte de Sites Web - AGENCE DE COMMUNICATION DIGITALE DAKAR</h1>
     <div class="service-intro">Pourquoi (re)penser votre site web&nbsp;?<br>Parce que votre site est votre première vitrine digitale. Qu’il s’agisse d’une création ou d’une refonte, nous réalisons des sites web modernes, performants et adaptés à vos objectifs métiers.</div>
     <div class="service-section-title"> Notre méthode&nbsp;: design stratégique, UX moderne & technologies fiables</div>
     <ol class="service-steps">
