--- a/wordpress.html
+++ b/wordpress.html
@@ -4,7 +4,24 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sécuriser son site WordPress - Porokhane Digital Consulting</title>
+  <title>Sécuriser son site WordPress - AGENCE DE COMMUNICATION DIGITALE DAKAR | Porokhane Digital Consulting</title>
+  <meta name="keywords" content="sécurité WordPress Dakar, agence communication digitale, protection site WordPress Sénégal, sécurisation WordPress Dakar, maintenance WordPress Sénégal, WordPress sécurisé Dakar">
+  
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://porokhanedigital.com/wordpress.html">
+  <meta property="og:title" content="Sécuriser son site WordPress - AGENCE DE COMMUNICATION DIGITALE DAKAR">
+  <meta property="og:description" content="Protégez votre site WordPress contre les piratages à Dakar. Agence de communication digitale spécialisée en sécurité WordPress, maintenance et protection de sites web au Sénégal.">
+  <meta property="og:image" content="https://porokhanedigital.com/logo_porokhane_digital.jpg">
+  <meta property="og:locale" content="fr_SN">
+  <meta property="og:site_name" content="Porokhane Digital Consulting">
+  
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://porokhanedigital.com/wordpress.html">
+  <meta property="twitter:title" content="Sécuriser son site WordPress - AGENCE DE COMMUNICATION DIGITALE DAKAR">
+  <meta property="twitter:description" content="Protégez votre site WordPress contre les piratages à Dakar. Agence de communication digitale spécialisée en sécurité WordPress, maintenance et protection de sites web au Sénégal.">
+  <meta property="twitter:image" content="https://porokhanedigital.com/logo_porokhane_digital.jpg">
   <link rel="icon" type="image/png" href="logo.png">
   <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
@@ -13,10 +30,45 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','GTM-MT6DMTW8');</script>
 <!-- End Google Tag Manager -->
-  <link rel="canonical" href="https://digital-porokhane.com/wordpress.html">
+  <link rel="canonical" href="https://porokhanedigital.com/wordpress.html">
   
 
-  <meta name="description" content="Protégez votre site WordPress contre les piratages avec 10 conseils simples et efficaces, accessibles à tous. Guide complet de sécurité WordPress.">
+  <meta name="description" content="Protégez votre site WordPress contre les piratages à Dakar. Agence de communication digitale spécialisée en sécurité WordPress, maintenance et protection de sites web au Sénégal.">
+  
+  <!-- JSON-LD Structured Data -->
+  <script type="application/ld+json">
+  {
+      "@context": "https://schema.org",
+      "@type": "LocalBusiness",
+      "name": "Porokhane Digital Consulting",
+      "description": "Agence de communication digitale à Dakar spécialisée en sécurité WordPress, maintenance de sites web, protection contre les piratages et solutions digitales",
+      "url": "https://porokhanedigital.com",
+      "telephone": "+221 77 XXX XX XX",
+      "address": {
+          "@type": "PostalAddress",
+          "streetAddress": "Dakar",
+          "addressLocality": "Dakar",
+          "addressCountry": "SN"
+      },
+      "geo": {
+          "@type": "GeoCoordinates",
+          "latitude": 14.6928,
+          "longitude": -17.4467
+      },
+      "openingHours": "Mo-Fr 08:00-18:00",
+      "sameAs": [
+          "https://www.facebook.com/porokhanedigital",
+          "https://www.linkedin.com/company/porokhane-digital",
+          "https://www.instagram.com/porokhanedigital"
+      ],
+      "serviceArea": {
+          "@type": "Place",
+          "name": "Dakar, Sénégal"
+      },
+      "priceRange": "$$",
+      "image": "https://porokhanedigital.com/logo_porokhane_digital.jpg"
+  }
+  </script>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <style>
@@ -408,7 +460,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <div class="blog-intro"><strong>Protégez votre site WordPress contre les piratages</strong> avec 10 conseils simples et efficaces, accessibles à tous.</div>
 
     <div class="blog-section">
-      <h1>10 conseils indispensables</h1>
+      <h1>Sécuriser son site WordPress - AGENCE DE COMMUNICATION DIGITALE DAKAR</h1>
       <p>WordPress est populaire, mais donc visé. Voici les 10 pratiques essentielles pour assurer votre tranquillité.</p>
     </div>
 
