--- a/devis.html
+++ b/devis.html
@@ -4,8 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Porokhane Digital Consulting - Solutions Digitales Innovantes</title>
-  <meta name="description" content="Porokhane Digital Consulting - Solutions digitales innovantes pour entreprises et organisations. Développement web, applications mobiles, marketing digital.">
+  <title>AGENCE DE COMMUNICATION DIGITALE DAKAR - Demande de Devis Gratuit | Porokhane Digital Consulting</title>
+  <meta name="description" content="AGENCE DE COMMUNICATION DIGITALE DAKAR : Demandez votre devis gratuit et personnalisé. Solutions digitales complètes pour votre entreprise à Dakar.">
+  <meta name="keywords" content="AGENCE DE COMMUNICATION DIGITALE DAKAR, devis gratuit, solutions digitales, marketing digital Dakar, développement web Dakar, communication digitale Sénégal, agence digitale Dakar">
   <link rel="icon" type="image/png" href="logo.png">
   <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
@@ -15,6 +16,51 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 })(window,document,'script','dataLayer','GTM-MT6DMTW8');</script>
 <!-- End Google Tag Manager -->
   <link rel="canonical" href="https://digital-porokhane.com/devis.html">
+  
+  <!-- Open Graph Meta Tags -->
+  <meta property="og:title" content="AGENCE DE COMMUNICATION DIGITALE DAKAR - Demande de Devis Gratuit | Porokhane Digital Consulting">
+  <meta property="og:description" content="AGENCE DE COMMUNICATION DIGITALE DAKAR : Demandez votre devis gratuit et personnalisé. Solutions digitales complètes pour votre entreprise à Dakar.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://digital-porokhane.com/devis.html">
+  <meta property="og:image" content="https://digital-porokhane.com/logo_porokhane_digital.jpg">
+  <meta property="og:site_name" content="Porokhane Digital Consulting">
+  <meta property="og:locale" content="fr_FR">
+  
+  <!-- Twitter Card Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="AGENCE DE COMMUNICATION DIGITALE DAKAR - Demande de Devis Gratuit | Porokhane Digital Consulting">
+  <meta name="twitter:description" content="AGENCE DE COMMUNICATION DIGITALE DAKAR : Demandez votre devis gratuit et personnalisé. Solutions digitales complètes pour votre entreprise à Dakar.">
+  <meta name="twitter:image" content="https://digital-porokhane.com/logo_porokhane_digital.jpg">
+  
+  <!-- JSON-LD Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "LocalBusiness",
+    "name": "Porokhane Digital Consulting",
+    "description": "AGENCE DE COMMUNICATION DIGITALE DAKAR : Solutions digitales complètes pour votre entreprise à Dakar.",
+    "url": "https://digital-porokhane.com",
+    "telephone": "+221710589088",
+    "email": "contact@digital-porokhane.com",
+    "address": {
+      "@type": "PostalAddress",
+      "streetAddress": "Ngor Extension villa 454",
+      "addressLocality": "Dakar",
+      "addressCountry": "SN"
+    },
+    "geo": {
+      "@type": "GeoCoordinates",
+      "latitude": "14.7167",
+      "longitude": "-17.4677"
+    },
+    "openingHours": "Mo-Fr 08:00-18:00",
+    "sameAs": [
+      "https://www.facebook.com/Porokhane.Digital.Consulting",
+      "https://www.linkedin.com/company/porokhane-digital-consulting",
+      "https://www.instagram.com/porokhane_digital_consulting/"
+    ]
+  }
+  </script>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
@@ -1879,8 +1925,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <section id="devis" class="devis-section">
     <div class="container">
       <div class="section-header">
-        <h1>Demande de Devis</h1>
-        <p>Obtenez une estimation gratuite et personnalisée pour votre projet digital</p>
+        <h1>AGENCE DE COMMUNICATION DIGITALE DAKAR - Demandez votre devis gratuit</h1>
+        <p>Obtenez une estimation personnalisée pour votre projet digital</p>
       </div>
       <form class="devis-form" id="devisForm">
         <h3><i class="fas fa-file-signature"></i> Formulaire de devis</h3>
