--- a/formations.html
+++ b/formations.html
@@ -4,8 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Formations | Porokhane Digital Consulting</title>
-  <meta name="description" content="Formations en Robotique, Impression 3D et Cybersécurité. Développez vos compétences avec nos experts.">
+  <title>AGENCE DE COMMUNICATION DIGITALE DAKAR - Formations Innovantes | Porokhane Digital Consulting</title>
+  <meta name="description" content="AGENCE DE COMMUNICATION DIGITALE DAKAR : Formations en Robotique, Impression 3D et Cybersécurité à Dakar. Développez vos compétences avec nos experts.">
+  <meta name="keywords" content="AGENCE DE COMMUNICATION DIGITALE DAKAR, formations Dakar, robotique Dakar, impression 3D Dakar, cybersécurité Dakar, formation digitale Sénégal, agence formation Dakar">
   <link rel="icon" type="image/png" href="logo.png">
   <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
@@ -15,6 +16,51 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 })(window,document,'script','dataLayer','GTM-MT6DMTW8');</script>
 <!-- End Google Tag Manager -->
   <link rel="canonical" href="https://digital-porokhane.com/formations.html">
+  
+  <!-- Open Graph Meta Tags -->
+  <meta property="og:title" content="AGENCE DE COMMUNICATION DIGITALE DAKAR - Formations Innovantes | Porokhane Digital Consulting">
+  <meta property="og:description" content="AGENCE DE COMMUNICATION DIGITALE DAKAR : Formations en Robotique, Impression 3D et Cybersécurité à Dakar. Développez vos compétences avec nos experts.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://digital-porokhane.com/formations.html">
+  <meta property="og:image" content="https://digital-porokhane.com/logo_porokhane_digital.jpg">
+  <meta property="og:site_name" content="Porokhane Digital Consulting">
+  <meta property="og:locale" content="fr_FR">
+  
+  <!-- Twitter Card Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="AGENCE DE COMMUNICATION DIGITALE DAKAR - Formations Innovantes | Porokhane Digital Consulting">
+  <meta name="twitter:description" content="AGENCE DE COMMUNICATION DIGITALE DAKAR : Formations en Robotique, Impression 3D et Cybersécurité à Dakar. Développez vos compétences avec nos experts.">
+  <meta name="twitter:image" content="https://digital-porokhane.com/logo_porokhane_digital.jpg">
+  
+  <!-- JSON-LD Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "LocalBusiness",
+    "name": "Porokhane Digital Consulting",
+    "description": "AGENCE DE COMMUNICATION DIGITALE DAKAR : Formations en Robotique, Impression 3D et Cybersécurité à Dakar.",
+    "url": "https://digital-porokhane.com",
+    "telephone": "+221710589088",
+    "email": "contact@digital-porokhane.com",
+    "address": {
+      "@type": "PostalAddress",
+      "streetAddress": "Ngor Extension villa 454",
+      "addressLocality": "Dakar",
+      "addressCountry": "SN"
+    },
+    "geo": {
+      "@type": "GeoCoordinates",
+      "latitude": "14.7167",
+      "longitude": "-17.4677"
+    },
+    "openingHours": "Mo-Fr 08:00-18:00",
+    "sameAs": [
+      "https://www.facebook.com/Porokhane.Digital.Consulting",
+      "https://www.linkedin.com/company/porokhane-digital-consulting",
+      "https://www.instagram.com/porokhane_digital_consulting/"
+    ]
+  }
+  </script>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <style>
@@ -1056,7 +1102,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <!-- Hero Banner -->
   <section class="hero-banner">
     <div class="container">
-      <h1>Formations Innovantes</h1>
+        <h1>AGENCE DE COMMUNICATION DIGITALE DAKAR - Formations Innovantes</h1>
       <p>Développez vos compétences dans les technologies de demain avec nos formations en Robotique, Impression 3D et Cybersécurité.</p>
     </div>
   </section>
