--- a/seo.html
+++ b/seo.html
@@ -4,8 +4,25 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Stratégie SEO - Porokhane Digital Consulting</title>
-  <meta name="description" content="Notre méthode SEO en 5 étapes pour booster votre visibilité, générer du trafic qualifié et obtenir des résultats durables.">
+  <title>SEO - AGENCE DE COMMUNICATION DIGITALE DAKAR | Porokhane Digital Consulting</title>
+  <meta name="description" content="Stratégie SEO complète et référencement naturel à Dakar. Agence de communication digitale spécialisée en optimisation SEO, audit SEO et amélioration de visibilité en ligne au Sénégal.">
+  <meta name="keywords" content="SEO Dakar, référencement naturel Sénégal, agence communication digitale, optimisation SEO Dakar, audit SEO Sénégal, visibilité en ligne Dakar">
+  
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://porokhanedigital.com/seo.html">
+  <meta property="og:title" content="SEO - AGENCE DE COMMUNICATION DIGITALE DAKAR">
+  <meta property="og:description" content="Stratégie SEO complète et référencement naturel à Dakar. Agence de communication digitale spécialisée en optimisation SEO, audit SEO et amélioration de visibilité en ligne au Sénégal.">
+  <meta property="og:image" content="https://porokhanedigital.com/logo_porokhane_digital.jpg">
+  <meta property="og:locale" content="fr_SN">
+  <meta property="og:site_name" content="Porokhane Digital Consulting">
+  
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://porokhanedigital.com/seo.html">
+  <meta property="twitter:title" content="SEO - AGENCE DE COMMUNICATION DIGITALE DAKAR">
+  <meta property="twitter:description" content="Stratégie SEO complète et référencement naturel à Dakar. Agence de communication digitale spécialisée en optimisation SEO, audit SEO et amélioration de visibilité en ligne au Sénégal.">
+  <meta property="twitter:image" content="https://porokhanedigital.com/logo_porokhane_digital.jpg">
   <link rel="icon" type="image/png" href="logo.png">
   <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
@@ -14,7 +31,42 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','GTM-MT6DMTW8');</script>
 <!-- End Google Tag Manager -->
-  <link rel="canonical" href="https://digital-porokhane.com/seo.html">
+  <link rel="canonical" href="https://porokhanedigital.com/seo.html">
+  
+  <!-- JSON-LD Structured Data -->
+  <script type="application/ld+json">
+  {
+      "@context": "https://schema.org",
+      "@type": "LocalBusiness",
+      "name": "Porokhane Digital Consulting",
+      "description": "Agence de communication digitale à Dakar spécialisée en SEO, référencement naturel, développement web et marketing digital",
+      "url": "https://porokhanedigital.com",
+      "telephone": "+221 77 XXX XX XX",
+      "address": {
+          "@type": "PostalAddress",
+          "streetAddress": "Dakar",
+          "addressLocality": "Dakar",
+          "addressCountry": "SN"
+      },
+      "geo": {
+          "@type": "GeoCoordinates",
+          "latitude": 14.6928,
+          "longitude": -17.4467
+      },
+      "openingHours": "Mo-Fr 08:00-18:00",
+      "sameAs": [
+          "https://www.facebook.com/porokhanedigital",
+          "https://www.linkedin.com/company/porokhane-digital",
+          "https://www.instagram.com/porokhanedigital"
+      ],
+      "serviceArea": {
+          "@type": "Place",
+          "name": "Dakar, Sénégal"
+      },
+      "priceRange": "$$",
+      "image": "https://porokhanedigital.com/logo_porokhane_digital.jpg"
+  }
+  </script>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <style>
@@ -400,7 +452,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     </div>
   </nav>
   <main class="service-main">
-    <h1 class="service-title">Notre stratégie de référencement naturel SEO</h1>
+    <h1 class="service-title">SEO - AGENCE DE COMMUNICATION DIGITALE DAKAR</h1>
     <div class="service-intro">Pourquoi investir dans le référencement naturel (SEO) ?<br>Un bon référencement naturel est crucial pour augmenter durablement votre visibilité en ligne, générer du trafic qualifié et booster vos conversions sans dépendre uniquement de la publicité payante.</div>
     <div class="service-section-title">Notre approche structurée en 5 étapes</div>
     <ol class="service-steps">
