--- a/strategie_digitale.html
+++ b/strategie_digitale.html
@@ -4,9 +4,26 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Stratégie Digitale - Porokhane Digital Consulting</title>
+  <title>Stratégie Digitale - AGENCE DE COMMUNICATION DIGITALE DAKAR | Porokhane Digital Consulting</title>
+  <meta name="keywords" content="stratégie digitale Dakar, agence communication digitale, marketing digital Sénégal, transformation digitale Dakar, conseil digital Sénégal, stratégie marketing Dakar">
+  
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://porokhanedigital.com/strategie_digitale.html">
+  <meta property="og:title" content="Stratégie Digitale - AGENCE DE COMMUNICATION DIGITALE DAKAR">
+  <meta property="og:description" content="Stratégie digitale et marketing digital à Dakar. Agence de communication digitale spécialisée en transformation digitale, SEO, Ads, CRM et community management au Sénégal.">
+  <meta property="og:image" content="https://porokhanedigital.com/logo_porokhane_digital.jpg">
+  <meta property="og:locale" content="fr_SN">
+  <meta property="og:site_name" content="Porokhane Digital Consulting">
+  
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://porokhanedigital.com/strategie_digitale.html">
+  <meta property="twitter:title" content="Stratégie Digitale - AGENCE DE COMMUNICATION DIGITALE DAKAR">
+  <meta property="twitter:description" content="Stratégie digitale et marketing digital à Dakar. Agence de communication digitale spécialisée en transformation digitale, SEO, Ads, CRM et community management au Sénégal.">
+  <meta property="twitter:image" content="https://porokhanedigital.com/logo_porokhane_digital.jpg">
   <link rel="icon" type="image/png" href="logo.png">
-  <link rel="canonical" href="https://digital-porokhane.com/strategie_digitale.html">
+  <link rel="canonical" href="https://porokhanedigital.com/strategie_digitale.html">
   <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
@@ -14,7 +31,42 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','GTM-MT6DMTW8');</script>
 <!-- End Google Tag Manager -->
-  <meta name="description" content="Notre méthode de marketing digital en 5 étapes clés, adaptée au contexte africain. Découvrez notre expertise en SEO, Ads, CRM, UX, community management.">
+  <meta name="description" content="Stratégie digitale et marketing digital à Dakar. Agence de communication digitale spécialisée en transformation digitale, SEO, Ads, CRM et community management au Sénégal.">
+  
+  <!-- JSON-LD Structured Data -->
+  <script type="application/ld+json">
+  {
+      "@context": "https://schema.org",
+      "@type": "LocalBusiness",
+      "name": "Porokhane Digital Consulting",
+      "description": "Agence de communication digitale à Dakar spécialisée en stratégie digitale, marketing digital, SEO, transformation digitale et solutions digitales",
+      "url": "https://porokhanedigital.com",
+      "telephone": "+221 77 XXX XX XX",
+      "address": {
+          "@type": "PostalAddress",
+          "streetAddress": "Dakar",
+          "addressLocality": "Dakar",
+          "addressCountry": "SN"
+      },
+      "geo": {
+          "@type": "GeoCoordinates",
+          "latitude": 14.6928,
+          "longitude": -17.4467
+      },
+      "openingHours": "Mo-Fr 08:00-18:00",
+      "sameAs": [
+          "https://www.facebook.com/porokhanedigital",
+          "https://www.linkedin.com/company/porokhane-digital",
+          "https://www.instagram.com/porokhanedigital"
+      ],
+      "serviceArea": {
+          "@type": "Place",
+          "name": "Dakar, Sénégal"
+      },
+      "priceRange": "$$",
+      "image": "https://porokhanedigital.com/logo_porokhane_digital.jpg"
+  }
+  </script>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <style>
@@ -557,7 +609,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   </nav>
 
   <main class="strategie-main">
-    <h1 class="strategie-title">Notre Stratégie Digitale</h1>
+    <h1 class="strategie-title">Stratégie Digitale - AGENCE DE COMMUNICATION DIGITALE DAKAR</h1>
     <div class="strategie-intro">Chez Porokhane Digital Consulting, nous croyons qu’un bon marketing digital doit créer de la valeur, inspirer la confiance et produire des résultats mesurables. Inspirée des meilleures pratiques internationales, notre méthode est adaptée au contexte africain et repose sur 5 grandes étapes clés.</div>
     <div class="timeline">
       <div class="timeline-step">
